# isentry

./: .gitignore  .hgignore  CMakeLists.txt  FrameProcessor.cxx  FrameProcessor.hxx  ImageRecorder.cxx  ImageRecorder.hxx  MediaRecorder.cxx  MediaRecorder.hxx  MotionDetector.cxx  MotionDetector.hxx  MotionEstimator.cxx  MotionEstimator.hxx  MotionState.hxx  ProjectHome.md  README.md  README.txt  VideoRecorder.cxx  VideoRecorder.hxx  cvplot.cxx  cvplot.hxx  iSentry.cxx  iSentryConfig.cxx  iSentryConfig.hxx  isentry.cfg
mathematica/: FlickerDetection.nb  MotionDetection.nb
samples/: flicker.mov  movement.mov  noflicker.mov
